--- a/presentation/index.css
+++ b/presentation/index.css
@@ -8,6 +8,10 @@
   background-color: transparent !important;
 }
 
+li {
+  font-size: 4rem !important;
+  line-height: 2;
+}
 .layout-glass {
   background-color: black;
   position: fixed;
